# gemini_cli_test

./: .gitignore  GEMINI.md  README.md  pyproject.toml  test.db
docs/: architecture.md  architecture_overview.md  data_models.md  interfaces.md  security_audit.md  security_audit_v2.md  tech_spec.md  test_evidence.md  threat_model.md
references/: qa.md  software_developer.md  solutions_architect.md  technical_ba.md  thread_modeler.md  vulnerability_auditor.md
src/: database.py  dependencies.py  main.py  models.py  schemas.py  tasks.py
tests/: test_qa_adversarial.py  test_upload.py
